--- a/.github/workflows/canister_test_suite_on_any_push.yml
+++ b/.github/workflows/canister_test_suite_on_any_push.yml
@@ -23,8 +23,13 @@ jobs: # Define the jobs to be run in this workflow
       - name: Install Nix
         run: |
           sh <(curl -L https://nixos.org/nix/install) --no-daemon
-          . /home/runner/.nix-profile/etc/profile.d/nix.sh  # Correct path for single-user installation
-      # - name: Cache Nix Packages
+          echo "Nix installed successfully"      # - name: Cache Nix Packages
+      - name: Check Nix Path
+        run: |
+          echo ". /home/runner/.nix-profile/etc/profile.d/nix.sh" >> $BASH_ENV
+          . /home/runner/.nix-profile/etc/profile.d/nix.sh
+          echo $PATH
+
       #   uses: rikhuijzer/cache-install@v1.1.4
       #   with:
       #     key: nix-${{ hashFiles('default.nix') }}
@@ -46,8 +51,8 @@ jobs: # Define the jobs to be run in this workflow
           key: rust-test-${{ hashFiles('**/Cargo.lock') }} # Cache key based on Cargo.lock file
 
       - name: Import DFX Identity # Step to import DFX identity using a secret key
-        shell: bash
         run: | # Run a shell command
+          source $BASH_ENV
           touch actions_identity.pem  # Create a temporary file for the identity
           echo "${{ secrets.FUEL_DAO_CANISTER_CONTROLLER_PRIVATE_KEY }}" > actions_identity.pem  # Write the secret key to the file
           nix-shell --run "dfx identity import --disable-encryption actions actions_identity.pem"  # Import the DFX identity
