--- a/.github/workflows/canister_test_suite_on_any_push.yml
+++ b/.github/workflows/canister_test_suite_on_any_push.yml
@@ -1,103 +1,94 @@
-name: Canisters Test Suite and Deployment # Define the name of the workflow
+name: Canisters Test Suite and Deployment
 
 on:
   push:
     branches:
-      - main # Trigger this workflow on pushes to the main branch
+      - main
   pull_request:
     branches:
-      - main # Also trigger this workflow for pull requests targeting the main branch
+      - main
 
-concurrency: # Manage concurrent runs of this workflow
-  group: ${{ github.workflow }}-${{ github.ref }} # Create a unique group based on the workflow name and branch
-  cancel-in-progress: true # Cancel any in-progress runs in this group when a new run is triggered
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
-jobs: # Define the jobs to be run in this workflow
-  test: # Job to run tests for the canisters
-    name: Run Canister Test Suite # Name of the job
-    runs-on: ubuntu-22.04 # Specify the type of runner to use for this job (Ubuntu 22.04)
+jobs:
+  test:
+    name: Run Canister Test Suite
+    runs-on: ubuntu-22.04
 
-    steps: # Define the steps to be executed in this job
-      - name: Checkout Code # Step to check out the code from the repository
-        uses: actions/checkout@v3 # Use the checkout action from GitHub Actions
-      - name: Install Nix
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Install Rust and DFX
         run: |
-          sh <(curl -L https://nixos.org/nix/install) --no-daemon
-          echo "Nix installed successfully"      # - name: Cache Nix Packages
-      - name: Set Nix Environment
-        run: |
-          echo ". /home/runner/.nix-profile/etc/profile.d/nix.sh" >> $GITHUB_ENV
-          shell: bash
+          sudo apt update
+          curl https://sh.rustup.rs -sSf | sh -s -- -y
+          source $HOME/.cargo/env
+          cargo install ic-cdk-optimizer
+          DFX_VERSION=0.11.0 # Change this to the DFX version you need
+          sh -ci "$(curl -fsSL https://sdk.dfinity.org/install.sh)"
+          echo "DFX and Rust installed successfully"
 
-      - name: Check Nix Path
-        run: |
-          . /home/runner/.nix-profile/etc/profile.d/nix.sh
-          echo $PATH
-      #   uses: rikhuijzer/cache-install@v1.1.4
-      #   with:
-      #     key: nix-${{ hashFiles('default.nix') }}
-      # - name: Cache Nix Packages # Step to cache Nix packages for faster builds
-      #   uses: rikhuijzer/cache-install@v1.1.4 # Use a caching action for Nix
-      #   with:
-      #     key: nix-${{ hashFiles('default.nix') }} # Cache key based on the hash of the default.nix file
-      #
-      - name: Cache Rust Dependencies and DFX Cache # Step to cache Rust and DFX build outputs
-        uses: actions/cache@v3 # Use the caching action from GitHub Actions
+      - name: Cache Rust and DFX
+        uses: actions/cache@v3
         with:
-          path: | # Define the paths to be cached
-            ~/.cargo/bin/  # Path for Rust binaries
-            ~/.cargo/registry/index/  # Path for Rust registry index
-            ~/.cargo/registry/cache/  # Path for Rust registry cache
-            ~/.cargo/git/db/  # Path for Rust git dependencies
-            target/  # Build output directory
-            .dfx/  # DFX cache directory
-          key: rust-test-${{ hashFiles('**/Cargo.lock') }} # Cache key based on Cargo.lock file
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+            .dfx/
+          key: rust-test-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Import DFX Identity # Step to import DFX identity using a secret key
-        run: | # Run a shell command
-          source $BASH_ENV
-          touch actions_identity.pem  # Create a temporary file for the identity
-          echo "${{ secrets.FUEL_DAO_CANISTER_CONTROLLER_PRIVATE_KEY }}" > actions_identity.pem  # Write the secret key to the file
-          nix-shell --run "dfx identity import --disable-encryption actions actions_identity.pem"  # Import the DFX identity
-          rm actions_identity.pem  # Remove the temporary identity file
-          nix-shell --run "dfx identity use actions"  # Set the imported identity for use
-      - name: Start Local Replica # Step to start a local DFX replica
-        run: nix-shell --run "dfx start --background" # Start the replica in the background
+      - name: Import DFX Identity
+        run: |
+          touch actions_identity.pem
+          echo "${{ secrets.FUEL_DAO_CANISTER_CONTROLLER_PRIVATE_KEY }}" > actions_identity.pem
+          dfx identity import --disable-encryption actions actions_identity.pem
+          rm actions_identity.pem
+          dfx identity use actions
 
-      - name: Create Canister IDs # Step to create canister IDs for the backend
-        run: | # Run a shell command
-          nix-shell --run "dfx canister create --no-wallet backend"  # Create the canister without a wallet
-      - name: Stop Local Replica # Step to stop the local DFX replica
-        run: nix-shell --run "dfx stop" # Stop the DFX replica
+      - name: Start Local Replica
+        run: dfx start --background
 
-      - name: Build Backend Canister # Step to build the backend canister
-        run: | # Run a shell command
-          nix-shell --run "dfx build backend"  # Build the backend canister
-          gzip -f -1 ./target/wasm32-unknown-unknown/release/backend.wasm  # Compress the generated WASM file
-      - name: Run Canister Test Suite # Step to run the canister test suite
-        env: # Define environment variables for this step
-          POCKET_IC_BIN: ${{ github.workspace }}/pocket-ic # Set the path to the Pocket IC binary
-        run: nix-shell --run "cargo test" # Run tests using Cargo
+      - name: Create Canister IDs
+        run: dfx canister create --no-wallet backend
 
-  deploy: # Job to deploy the canister
-    name: Deploy Canister # Name of the deployment job
-    runs-on: ubuntu-22.04 # Specify the type of runner to use for this job (Ubuntu 22.04)
-    needs: test # Ensure this job runs only after the test job has completed successfully
+      - name: Stop Local Replica
+        run: dfx stop
 
-    steps: # Define the steps to be executed in this job
-      - name: Checkout Code # Step to check out the code from the repository
-        uses: actions/checkout@v3 # Use the checkout action from GitHub Actions
+      - name: Build Backend Canister
+        run: |
+          dfx build backend
+          gzip -f -1 ./target/wasm32-unknown-unknown/release/backend.wasm
 
-      - name: Import DFX Identity # Step to import DFX identity using a secret key
-        run: | # Run a shell command
-          touch actions_identity.pem  # Create a temporary file for the identity
-          echo "${{ secrets.FUEL_DAO_CANISTER_CONTROLLER_PRIVATE_KEY }}" > actions_identity.pem  # Write the secret key to the file
-          nix-shell --run "dfx identity import --disable-encryption actions actions_identity.pem"  # Import the DFX identity
-          rm actions_identity.pem  # Remove the temporary identity file
-          nix-shell --run "dfx identity use actions"  # Set the imported identity for use
-      - name: Deploy Canister to ICP # Step to deploy the canister to the Internet Computer
-        env: # Define environment variables for this step
-          ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
-        run: | # Run a shell command
-          nix-shell --run "dfx deploy backend --network ic"
-          # nix-shell --run "dfx deploy backend --network $ICP_NETWORK"  # Deploy the backend canister to the specified ICP network
+      - name: Run Canister Test Suite
+        env:
+          POCKET_IC_BIN: ${{ github.workspace }}/pocket-ic
+        run: cargo test
+
+  deploy:
+    name: Deploy Canister
+    runs-on: ubuntu-22.04
+    needs: test
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Import DFX Identity
+        run: |
+          touch actions_identity.pem
+          echo "${{ secrets.FUEL_DAO_CANISTER_CONTROLLER_PRIVATE_KEY }}" > actions_identity.pem
+          dfx identity import --disable-encryption actions actions_identity.pem
+          rm actions_identity.pem
+          dfx identity use actions
+
+      - name: Deploy Canister to ICP
+        env:
+          ICP_NETWORK: ic
+        run: |
+          dfx deploy backend --network ic
