--- a/.github/workflows/canister_test_suite_on_any_push.yml
+++ b/.github/workflows/canister_test_suite_on_any_push.yml
@@ -22,13 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check Terminal
-        run: |
-          if [ -t 1 ]; then
-            echo "Terminal is available."
-          else
-            echo "No interactive terminal detected. Running in non-interactive mode."
-          fi
-
+        run: bash -c 'if [ -t 1 ]; then echo "Terminal is available."; else echo "No interactive terminal detected. Running in non-interactive mode."; fi'
       - name: Install Rust and DFX
         run: |
           sudo apt update
