--- a/.github/workflows/canister_test_suite_on_any_push.yml
+++ b/.github/workflows/canister_test_suite_on_any_push.yml
@@ -30,8 +30,9 @@ jobs:
 
       - name: Install DFX
         run: |
-          # Install DFX without interactive prompts
-          curl -fsSL https://sdk.dfinity.org/install.sh | sh -s -- -y
+          # Install DFX non-interactively
+          DFX_VERSION=0.11.0  # Change to your required version
+          curl -fsSL https://sdk.dfinity.org/install.sh | sh -s -- --version $DFX_VERSION --no-modify-path
           echo "DFX installed successfully"
 
       - name: Set up PATH
