skip sfx install

--- a/.github/workflows/canister_test_suite_on_any_push.yml
+++ b/.github/workflows/canister_test_suite_on_any_push.yml
@@ -28,15 +28,15 @@ jobs:
           source $HOME/.cargo/env
           cargo install ic-cdk-optimizer
 
-      - name: Install DFX
-        run: |
-          # Install DFX non-interactively
-          DFX_VERSION=0.11.0  # Change to your required version
-          curl -fsSL https://sdk.dfinity.org/install.sh | sh -s -- --version $DFX_VERSION --no-modify-path
-          echo "DFX installed successfully"
-
-      - name: Set up PATH
-        run: echo "$HOME/.local/share/dfx/bin" >> $GITHUB_PATH
+      # - name: Install DFX
+      #   run: |
+      #     # Install DFX non-interactively
+      #     DFX_VERSION=0.11.0  # Change to your required version
+      #     curl -fsSL https://sdk.dfinity.org/install.sh | sh -s -- --version $DFX_VERSION --no-modify-path
+      #     echo "DFX installed successfully"
+      #
+      # - name: Set up PATH
+      #   run: echo "$HOME/.local/share/dfx/bin" >> $GITHUB_PATH
 
       - name: Cache Rust and DFX
         uses: actions/cache@v3
