--- a/.github/workflows/canister_test_suite_on_any_push.yml
+++ b/.github/workflows/canister_test_suite_on_any_push.yml
@@ -24,12 +24,12 @@ jobs:
         uses: rikhuijzer/cache-install@v1.1.4
         with:
           key: nix-${{ hashFiles('default.nix') }}
-      - name: Install Rust
-        run: |
-          sudo apt update
-          curl https://sh.rustup.rs -sSf | sh -s -- -y
-          source $HOME/.cargo/env
-          cargo install ic-cdk-optimizer
+      # - name: Install Rust
+      #   run: |
+      #     sudo apt update
+      #     curl https://sh.rustup.rs -sSf | sh -s -- -y
+      #     source $HOME/.cargo/env
+      #     cargo install ic-cdk-optimizer
 
       - name: Cache rust dependencies, build output and DFX build cache
         uses: actions/cache@v3
