--- a/.github/workflows/canister_test_suite_on_any_push.yml
+++ b/.github/workflows/canister_test_suite_on_any_push.yml
@@ -68,10 +68,12 @@ jobs:
       - name: Deploy Canister
         run: nix-shell --run "dfx deploy"
 
-      - name: Run Canister Test Suite # Run canister tests
-        env:
-          POCKET_IC_BIN: ${{ github.workspace }}/pocket-ic
-        run: nix-shell --run "cargo test"
+      - name: Test Backend via Candid Interface
+        run: |
+          echo "Testing Backend..."
+          curl --request GET \
+            --url "http://127.0.0.1:4943/?canisterId=a3shf-5eaaa-aaaaa-qaafa-cai&id=asrmz-lmaaa-aaaaa-qaaeq-cai" \
+            --header "Content-Type: application/json"
 
   # deploy:
   #   name: Deploy Canister # Deployment job
