--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - - name: Install DFX SDK
+    - name: Install DFX SDK
       run: |
         sudo apt-get update
         sudo apt-get install -y pkg-config build-essential libssl-dev
