--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y pkg-config build-essential libssl-dev
         sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)" < /dev/null
+        echo "Adding DFX to PATH"
+        echo 'export PATH=$PATH:/home/runner/.local/share/dfx/bin' >> $GITHUB_ENV
         dfx --version
 
     - name: Authenticate DFX Identity
