--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y pkg-config build-essential libssl-dev
-        sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)" < /dev/null
+        curl -fsSL https://internetcomputer.org/install.sh -o install.sh
+        chmod +x install.sh
+        # Force the installation in non-interactive mode
+        ./install.sh --no-prompt < /dev/null
         echo "Adding DFX to PATH"
         echo 'export PATH=$PATH:/home/runner/.local/share/dfx/bin' >> $GITHUB_ENV
         dfx --version
