--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         sudo apt-get install -y pkg-config build-essential libssl-dev
         # Download DFX directly from GitHub
         DFX_VERSION=0.24.0
-        curl -LO https://github.com/dfinity/sdk/releases/download/${DFX_VERSION}/dfx-${DFX_VERSION}-linux-x86_64.tar.gz
+        curl -LO https://github.com/dfinity/sdk/releases/download/${DFX_VERSION}/dfx-${DFX_VERSION}-x86_64-linux.tar.gz
         tar xzf dfx-${DFX_VERSION}-linux-x86_64.tar.gz
         sudo mv dfx /usr/local/bin/dfx
         rm dfx-${DFX_VERSION}-linux-x86_64.tar.gz
