--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,15 +17,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install DFX SDK
+    - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y pkg-config build-essential libssl-dev
-        # Download DFX directly from GitHub
+
+    - name: Download and install DFX SDK
+      run: |
         DFX_VERSION=0.24.0
         curl -LO https://github.com/dfinity/sdk/releases/download/${DFX_VERSION}/dfx-${DFX_VERSION}-x86_64-linux.tar.gz
-        tar xzf dfx-${DFX_VERSION}-x86_64-linux.tar.gz -C /usr/local/bin --strip-components=1
+        mkdir -p /usr/local/bin/dfx
+        tar -xzf dfx-${DFX_VERSION}-x86_64-linux.tar.gz -C /usr/local/bin/dfx --strip-components=1
+        echo 'export PATH=$PATH:/usr/local/bin/dfx' >> $GITHUB_ENV
         rm dfx-${DFX_VERSION}-x86_64-linux.tar.gz
+
+    - name: Check DFX installation
+      run: |
+        source $GITHUB_ENV
         dfx --version
 
     - name: Authenticate DFX Identity
