--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,33 +28,31 @@ jobs:
         curl -LO https://github.com/dfinity/sdk/releases/download/${DFX_VERSION}/dfx-${DFX_VERSION}-x86_64-linux.tar.gz
         mkdir -p /usr/local/bin/dfx
         tar -xzf dfx-${DFX_VERSION}-x86_64-linux.tar.gz -C /usr/local/bin/dfx --strip-components=1
-        echo 'export PATH=$PATH:/usr/local/bin/dfx' >> $GITHUB_ENV
         rm dfx-${DFX_VERSION}-x86_64-linux.tar.gz
 
     - name: Check DFX installation
       run: |
-        source $GITHUB_ENV
-        dfx --version
+        /usr/local/bin/dfx/dfx --version
 
     - name: Authenticate DFX Identity
       run: |
         echo "${DFX_PRIVATE_KEY}" > identity.pem
         chmod 600 identity.pem
-        dfx identity new github-action --disable-encryption
-        dfx identity import github-action identity.pem
-        dfx identity use github-action
+        /usr/local/bin/dfx/dfx identity new github-action --disable-encryption
+        /usr/local/bin/dfx/dfx identity import github-action identity.pem
+        /usr/local/bin/dfx/dfx identity use github-action
 
     - name: Build Backend with DFX
       run: |
-        dfx build backend
+        /usr/local/bin/dfx/dfx build backend
 
     - name: Install Backend Canister
       run: |
-        dfx canister install backend --mode reinstall --network ic
+        /usr/local/bin/dfx/dfx canister install backend --mode reinstall --network ic
 
     - name: Deploy Backend to Canister 2
       run: |
-        dfx deploy backend --network ic
+        /usr/local/bin/dfx/dfx deploy backend --network ic
 
     - name: Clean up
       run: |
