--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,19 +33,12 @@ jobs:
       run: |
         /usr/local/bin/dfx --version
 
-    - name: Check if identity exists and use it or create a new one
+    - name: Set up DFX default identity
       run: |
-        if /usr/local/bin/dfx identity list | grep -q "github-action"; then
-          echo "Using existing identity 'github-action'."
-          /usr/local/bin/dfx identity use github-action
-        else
-          echo "Creating new identity 'github-action'."
-          echo "${DFX_PRIVATE_KEY}" > identity.pem
-          chmod 600 identity.pem
-          /usr/local/bin/dfx identity new github-action --storage-mode=plaintext
-          /usr/local/bin/dfx identity import github-action identity.pem
-          /usr/local/bin/dfx identity use github-action
-        fi
+        echo "${DFX_PRIVATE_KEY}" > identity.pem
+        chmod 600 identity.pem
+        /usr/local/bin/dfx identity import default identity.pem
+        /usr/local/bin/dfx identity use default
 
     - name: Build Backend with DFX
       run: |
