--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,15 @@ jobs:
           /usr/local/bin/dfx identity use default
         fi
 
+    - name: Create Backend Canister if not exists
+      run: |
+        if /usr/local/bin/dfx canister id backend >/dev/null 2>&1; then
+          echo "Backend canister already exists."
+        else
+          echo "Creating Backend canister."
+          /usr/local/bin/dfx canister create backend
+        fi
+
     - name: Build Backend with DFX
       run: |
         /usr/local/bin/dfx build backend
