--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,10 @@ jobs:
       run: |
         /usr/local/bin/dfx --version
 
+    - name: Install Rust target for WebAssembly
+      run: |
+        rustup target add wasm32-unknown-unknown
+
     - name: Set up DFX default identity
       run: |
         if /usr/local/bin/dfx identity list | grep -q "default"; then
