--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -14,3 +14,7 @@ ic-cdk = "0.16"
 ic-cdk-macros = "0.16.0"
 serde = { version = "1.0", features = ["derive"] }
 #chrono = { version = "0.4", features = ["serde"] }
+# pocket-ic = "5.0.0"
+
+[dev-dependencies]
+pocket-ic = "5.0.0"
