--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+base64 = "0.22.1"
 candid = "0.10"
 ic-cdk = "0.16"
 ic-cdk-macros = "0.16.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.128"
 #chrono = { version = "0.4", features = ["serde"] }
 # pocket-ic = "5.0.0"
 
