--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -15,6 +15,7 @@ ic-cdk = "0.16"
 ic-cdk-macros = "0.16.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.128"
+time = {version = "0.3.36", features = ["formatting", "parsing"]}
 #chrono = { version = "0.4", features = ["serde"] }
 # pocket-ic = "5.0.0"
 
