--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,10 @@ jobs:
       - name: check balance
         run: nix-shell --run "dfx cycles balance --network ic"
 
+
+      - name: Create canisters
+        run: nix-shell --run "dfx canister create --all --network ic"
+
       - name: Deploy Backend Canister to ICP # Deploy canister to the Internet Computer
         env:
           ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
@@ -69,21 +73,18 @@ jobs:
         env:
           ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
         run: |
-          nix-shell --run "dfx canister create provision --network ic"
           nix-shell --run "dfx deploy provision --network ic --yes"
 
       - name: Deploy Asset_proxy Canister to ICP # Deploy canister to the Internet Computer
         env:
           ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
         run: |
-          nix-shell --run "dfx canister create asset_proxy --network ic"
           nix-shell --run "dfx deploy asset_proxy --network ic --yes"
 
       - name: Deploy Asset Canister to ICP # Deploy canister to the Internet Computer
         env:
           ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
         run: |
-          nix-shell --run "dfx canister create asset --network ic"
           nix-shell --run "dfx deploy asset --network ic --yes"
 
       - name: Call Upload Asset Wasm Script 
