Deploying with 1T cycles

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,10 +59,6 @@ jobs:
       - name: check balance
         run: nix-shell --run "dfx cycles balance --network ic"
 
-
-      - name: Create canisters
-        run: nix-shell --run "dfx canister create --all --network ic"
-
       - name: Deploy Backend Canister to ICP # Deploy canister to the Internet Computer
         env:
           ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
@@ -73,19 +69,19 @@ jobs:
         env:
           ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
         run: |
-          nix-shell --run "dfx deploy provision --network ic --yes"
+          nix-shell --run "dfx deploy provision --network ic --with-cycles=2000000000000 --yes"
 
       - name: Deploy Asset_proxy Canister to ICP # Deploy canister to the Internet Computer
         env:
           ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
         run: |
-          nix-shell --run "dfx deploy asset_proxy --network ic --yes"
+          nix-shell --run "dfx deploy asset_proxy --network ic --with-cycles=1000000000000 --yes"
 
       - name: Deploy Asset Canister to ICP # Deploy canister to the Internet Computer
         env:
           ICP_NETWORK: ic # Specify the network to deploy to (default is 'ic')
         run: |
-          nix-shell --run "dfx deploy asset --network ic --yes"
+          nix-shell --run "dfx deploy asset --network ic --with-cycles=1000000000000 --yes"
 
       - name: Call Upload Asset Wasm Script 
         run: |
