Passing cycles to Provision

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,10 @@ jobs:
       - name: Use myidentity # Start local DFX replica
         run: nix-shell --run "dfx identity use actions"
 
+      - name: Top up Provision 
+        run: nix-shell --run "dfx cycles top-up provision 790000000000 --network ic"
+
+
       # - name: Top up Provision 
       #   run: nix-shell --run "dfx cycles top-up provision 4000000000000 --network ic"
 
