--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   test:
-    name: Run Canister Test Suite
+    name: Deploy Canisters
     runs-on: ubuntu-22.04
 
     steps:
@@ -56,8 +56,8 @@ jobs:
       - name: Use myidentity # Start local DFX replica
         run: nix-shell --run "dfx identity use actions"
 
-      # - name: Top up Provision 
-      #   run: nix-shell --run "dfx cycles top-up provision 4000000000000 --network ic"
+      - name: Top up Provision 
+        run: nix-shell --run "dfx cycles top-up provision 6000000000000 --network ic"
 
       # - name: Get Identity Principal 
       #   run: nix-shell --run "dfx identity get-principal"
