--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,8 +56,8 @@ jobs:
       - name: Use myidentity # Start local DFX replica
         run: nix-shell --run "dfx identity use actions"
 
-      - name: Top up Provision 
-        run: nix-shell --run "dfx cycles top-up provision 1500000000000 --network ic"
+      # - name: Top up Provision 
+      #   run: nix-shell --run "dfx cycles top-up provision 1500000000000 --network ic"
 
       # - name: Get Identity Principal 
       #   run: nix-shell --run "dfx identity get-principal"
@@ -100,10 +100,10 @@ jobs:
       #     chmod +x ./scripts/upload_asset_wasm.sh
       #     nix-shell --run "./scripts/upload_asset_wasm.sh"
 
-      # - name: Call Upload Token Wasm Script 
-      #   run: |
-      #     chmod +x ./scripts/upload_token_wasm.sh
-      #     nix-shell --run "./scripts/upload_token_wasm.sh"
+      - name: Call Upload Token Wasm Script 
+        run: |
+          chmod +x ./scripts/upload_token_wasm.sh
+          nix-shell --run "./scripts/upload_token_wasm.sh"
 
       - name: Stop Local Replica # Stop the local DFX replica
         run: nix-shell --run "dfx stop"
